Fixing spacing in grids
Images had weird spacing

--- a/client/src/styles/RelevantArticles.css
+++ b/client/src/styles/RelevantArticles.css
@@ -1,7 +1,3 @@
 .relevantArticles {
 	margin-top: 5em;
 }
-
-#main .wholeMarkdownSection .grid {
-	margin: 0;
-}
